# dermis

./: Cargo.toml
examples/: values.rs
src/: lib.rs  macros.rs  test.rs
src/ast/: expression.rs  mod.rs
src/value/: array.rs  mod.rs  number.rs  object.rs  symbol.rs  value.rs
src/value/owned/: array.rs  mod.rs  object.rs  symbol.rs  value.rs
src/value/symbol/: format.rs  mod.rs
